rs/k8s/ing/v2/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ingress-nginx
  name: nginx
#  labels:
#    app: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-master.md.net
      http:
        paths:
          - path: /rs
            pathType: Prefix
            backend:
              service:
                name: rs-api
                port:
                  number: 80
